// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyleCards Paragraph Check Paragraph 1`] = `
Object {
  "p": Object {
    "color": "",
    "color-global": true,
    "font-family-general": "Roboto",
    "font-size-general": 20,
    "font-size-unit-general": "px",
    "font-style-general": "italic",
    "font-weight-general": "300",
    "letter-spacing-general": 5,
    "letter-spacing-unit-general": "px",
    "line-height-general": 10,
    "line-height-unit-general": "px",
    "line-height-xxl": 30,
    "palette-color": 4,
    "palette-opacity": 1,
    "palette-status": true,
    "text-decoration-general": "overline",
    "text-direction-general": "ltr",
    "text-indent-general": 44,
    "text-orientation-general": "mixed",
    "text-transform-general": "capitalize",
  },
}
`;

exports[`StyleCards Paragraph Works on responsive 1`] = `
Object {
  "p": Object {
    "color": "",
    "color-global": true,
    "font-family-general": "Roboto",
    "font-size-general": 20,
    "font-size-m": 10,
    "font-size-unit-general": "px",
    "font-style-general": "italic",
    "font-style-m": "oblique",
    "font-weight-general": "300",
    "font-weight-m": "400",
    "letter-spacing-general": 5,
    "letter-spacing-m": 15,
    "letter-spacing-unit-general": "px",
    "line-height-general": 10,
    "line-height-m": 20,
    "line-height-unit-general": "px",
    "line-height-xxl": 30,
    "palette-color": 4,
    "palette-opacity": 1,
    "palette-status": true,
    "text-decoration-general": "overline",
    "text-decoration-m": "underline",
    "text-direction-general": "ltr",
    "text-direction-m": "rtl",
    "text-indent-general": 44,
    "text-indent-m": 22,
    "text-orientation-general": "mixed",
    "text-orientation-m": "upright",
    "text-transform-general": "capitalize",
    "text-transform-m": "uppercase",
  },
}
`;
